test/expected/explain_ud.out
explain unsigned double x
                 ^
18: error: "unsigned double" is illegal for built-in type
